--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
     <title>Navigation Bar</title>
     <style>
         ul {
-            
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            width: 25%;
         }
-
-        a {
-            
+            li {
+                float: none;
+                background-color: white;
+            }
+      li a {
+            display: block;
+            color: black;
+            padding: 10px;
+            text-decoration: none;
         }
     </style>
 </head>
